<resources>
    <string name="app_name">Caffeine Club</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="write_something">Write something…</string>
    <string name="new_post_button">Add new post</string>
    <string name="add_picture">Add picture</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse rutrum urna laoreet ultrices facilisis. Nulla viverra malesuada ultricies. Pellentesque aliquet ligula vitae urna cursus pretium. Nullam id nibh felis. Cras purus tellus, lacinia nec faucibus id, ornare vitae magna. Ut vestibulum, nisi a congue viverra, ex eros tristique ligula, sed.</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="search_users">Search users</string>
    <string name="profile">Profile</string>
    <string name="cover_picture_description">Cover picture</string>
</resources>